added class to API
